# graph_mining

./: .gitignore  README.md
api/: main.py  pyproject.toml
api/graph_mining/: entity.py
backend/: README.md  main.py  pyproject.toml  scrapy.cfg  tg_crawler.db
backend/.dockerfiles/: docker-compose.yml
backend/scripts/: theme_crawler.ipynb
backend/src/api/: models.py
backend/src/crawler/: config.py  items.py  middlewares.py  pipelines.py  settings.py
backend/src/crawler/database/: models.py  session.py
backend/src/crawler/spiders/: commons.py  naver_main_news_list.py  naver_news_content.py  naver_news_list.py  naver_research_list.py  naver_theme_detail.py  naver_theme_list.py  theme_detail.py  theme_list.py
backend/src/database/: session.py
backend/src/database/models/: naver_article.py  naver_research.py  naver_theme.py  xing_theme.py
backend/src/xing/: auth.py  config.py  constant.py
backend/src/xing/tasks/: master.py
backend/tg_backend/tg_backend/: graph_example.json  main.py
backend/tg_crawler/: scrapy.cfg  tg_crawler.db
backend/tg_crawler/tg_crawler/: config.py  middlewares.py  pipelines.py  settings.py
backend/tg_crawler/tg_crawler/database/: models.py  session.py
backend/tg_crawler/tg_crawler/spiders/: theme_detail.py  theme_list.py
dashboard/: package.json  vite.config.ts
dashboard/src/: App.tsx
dashboard/src/dto/: graph.ts
