[tool.poetry]
name = "graph-mining"
version = "0.1.0"
description = ""
authors = ["BrianBae <brian.bae.contact@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
