[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "theme-guide"
version = "0.1.0"
description = ""
authors = [{ name = "BrianBae", email = "bohblue23@gmail.com" }]
requires-python = "~=3.12"
readme = "README.md"
dependencies = [
    "beautifulsoup4>=4.12.3,<5",
    "requests>=2.31.0,<3",
    "scrapy>=2.11.1,<3",
    "scrapy-fake-useragent>=1.4.4,<2",
    "alembic>=1.13.1,<2",
    "httpx>=0.27.2,<0.28",
    "aiofiles>=24.1.0,<25",
    "langchainhub>=0.1.21,<0.2",
    "langsmith>=0.1.137,<0.2",
    "langserve[all]>=0.3.0,<0.4",
    "langchain-teddynote>=0.3.14,<0.4",
    "langchain-openai>=0.2.3,<0.3",
    "langchain-community>=0.3.3,<0.4",
    "langchain-core>=0.3.12,<0.4",
    "langchain-upstage>=0.3.0,<0.4",
    "langchain-milvus>=0.1.7,<0.2",
    "langchain-redis>=0.1.1,<0.2",
    "langchain-anthropic>=0.3.0,<0.4",
    "langchain-postgres>=0.0.12,<0.0.13",
    "langgraph-checkpoint-sqlite>=2.0.1,<3",
    "langgraph-cli>=0.1.61,<0.2",
    "langgraph>=0.2.59,<0.3",
    "langgraph-sdk>=0.1.43,<0.2",
    "pymupdf>=1.24.12,<2",
    "pandas>=2.2.3,<3",
    "streamlit>=1.40.1,<2",
    "duckduckgo-search>=6.3.5,<7",
    "wikipedia>=1.4.0,<2",
    "fastapi[standard]>=0.115.5,<0.116",
    "twisted>=24.10.0,<25",
    "playwright>=1.49.0,<2",
    "scrapy-playwright>=0.0.42,<0.0.43",
    "psycopg2>=2.9.10,<3",
    "pytz~=2024.2",
    "diskcache>=5.6.3,<6",
    "supabase>=2.10.0,<3",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5,<7",
    "pylint>=3.3.1,<4",
    "ruff>=0.7.4,<0.8",
    "mypy>=1.13.0,<2",
    "isort>=5.13.2,<6",
    "clipboard>=0.0.4,<0.0.5",
    "flake8>=7.1.1,<8",
    "pytest>=8.3.3,<9",
    "pyflyby>=1.9.10,<2",
]

[tool.hatch.build.targets.wheel]
packages = ["theme_guide"]